<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#363333"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_conversation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_conversation" />

            <TextView
                android:id="@+id/tv_tab_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_conversation"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_group" />

            <TextView
                android:id="@+id/tv_tab_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_group"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_search" />

            <TextView
                android:id="@+id/tv_tab_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_search"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/v_indicate_line"
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:background="#f00" />


    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </android.support.v4.view.ViewPager>


</LinearLayout>
